# TensorSlow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
.github/workflows/: lint.yaml
tensorslow/: base.py  math.py  operations.py  tensor.py  utils.py
tensorslow/nn/: activations.py  loss.py
tensorslow/optim/: optimizer_base.py  optimizers.py
